--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk-experimental": "^14.1.3",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -20,6 +21,7 @@
     "@angular/router": "~12.2.0",
     "feather-icons": "^4.29.0",
     "lodash": "^4.17.21",
+    "ng-cdk-table-virtual-scroll": "^1.0.2",
     "ng-zorro-antd": "^13.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
