--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "feather-icons": "^4.29.0",
+    "jalali-moment": "^3.3.11",
     "lodash": "^4.17.21",
     "ng-cdk-table-virtual-scroll": "^1.0.2",
     "ng-zorro-antd": "^13.4.0",
